Fix text alignment

--- a/styles/sections/_application_edit.scss
+++ b/styles/sections/_application_edit.scss
@@ -98,6 +98,8 @@
   margin-top: 5 * $gap;
   margin-bottom: 8 * $gap;
 
+  text-align: left;
+
   .usa-input {
     margin: 2rem 0 2rem 0;
 
